--- a/index.html
+++ b/index.html
@@ -5,16 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ryan Lasher | Digital Media Expert Consultant</title>
+    <!-- Font awesome 4.7 CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- April 9, 2019 -->
+
+       <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Ryan Lasher | Digital Media Expert Consultant -->
-    <!-- April 2, 2019 -->
   </head>
   <body>
     <!-- Header/nav section -->
     <header></header>
 
     <!-- Main section with all the content! -->
-    <main></main>
+    <main>
+      <div class="wrapper text-center">
+        <p>Lorem ipsum.</p>
+        <p>Lorem ipsum.</p>
+      </div>
+    </main>
 
     <!-- Footer section -->
     <footer></footer>
