--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
        <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Wanna learn about a lot of the Bootstrap 4 elements that I have implemented? https://www.w3schools.com/bootstrap4/ -->
   </head>
   <body>
     <!-- Header/nav section -->
