Added footer fixed the top nav blocking my h1 element.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <!-- April 9, 2019 -->
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -75,7 +80,7 @@
     </nav>
 
     <!-- Main section with all the content! -->
-    <div class="container text-center" id="top">
+    <div class="pt-5 mt-4 container text-center" id="top">
       <h1 class="text-primary">Welcome to Ryan's Digital Media Agency!</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque animi,
@@ -442,8 +447,47 @@
     </div>
 
     <!-- Footer section -->
-    <footer>
-      
-    </footer>
+    <nav
+      class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center"
+    >
+      <a class="navbar-brand" href="#">
+        Logo here
+      </a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.facebook.com"
+            ><i class="fa fa-facebook-official" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.twitter.com"
+            ><i class="fa fa-twitter" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.instagram.com"
+            ><i class="fa fa-instagram" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.snapchat.com"
+            ><i class="fa fa-snapchat-ghost" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.youtube.com"
+            ><i class="fa fa-youtube-play" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.linkedin.com"
+            ><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul>
+      <p class="px-15 my-2 mx-2 text-white font-italic">
+        Copyright (c) 2019 Ryan Lasher. All Rights Reserved.
+      </p>
+    </nav>
   </body>
 </html>
